kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: support-toolkit
  labels:
    name: support-toolkit
